# OmniVision

./: .gitignore  README.md  config.json  pyproject.toml
scripts/: init.py  install_torch_auto.py
src/: datasets.py  train.py  utils.py
src/visualization/: count.py
