[project]
name = "base-pipeline"
version = "0.1.0"
description = "Pipeline de visão computacional com PyTorch e GPU NVIDIA"
authors = [{ name = "VisionLab" }]
requires-python = ">=3.10"

dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "opencv-python",
    "scikit-image",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "albumentations",
    "Pillow",
    "tensorboard",
    "torchmetrics",
    "pyyaml",
    "hydra-core",
    "onnx",
    "onnxruntime",
    "torchinfo",
    "jupyterlab",
    "roboflow>=1.2.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "ipykernel",
]

[tool.uv]
managed = true
index-url = "https://pypi.org/simple"
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
include = ["torch", "torchvision", "torchaudio"]